@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:id="@+id/menu_add_list"
+        android:orderInCategory="1"
+        android:title="@string/menu_create_list"
+        android:showAsAction="never" />
+</menu>
