@@ -2,6 +2,7 @@ package com.klinker.android.talon.ui.drawer_activities;
 
 import android.app.ActionBar;
 import android.app.Activity;
+import android.app.Dialog;
 import android.content.Context;
 import android.content.Intent;
 import android.content.SharedPreferences;
@@ -29,6 +30,7 @@ import android.widget.ImageButton;
 import android.widget.LinearLayout;
 import android.widget.ListView;
 import android.widget.TextView;
+import android.widget.Toast;
 
 import com.klinker.android.talon.R;
 import com.klinker.android.talon.adapters.ListsArrayAdapter;
@@ -49,6 +51,7 @@ import com.klinker.android.talon.ui.ComposeActivity;
 import com.klinker.android.talon.ui.ComposeDMActivity;
 import com.klinker.android.talon.ui.LoginActivity;
 import com.klinker.android.talon.ui.UserProfileActivity;
+import com.klinker.android.talon.ui.widgets.HoloEditText;
 import com.klinker.android.talon.utils.Utils;
 import com.squareup.picasso.Picasso;
 
@@ -62,6 +65,7 @@ import twitter4j.ResponseList;
 import twitter4j.Trend;
 import twitter4j.Twitter;
 import twitter4j.UserList;
+import twitter4j.examples.list.CreateUserList;
 
 /**
  * Created by luke on 11/27/13.
@@ -337,11 +341,9 @@ public class ListsActivity extends Activity {
     @Override
     public boolean onCreateOptionsMenu(Menu menu) {
         MenuInflater inflater = getMenuInflater();
-        inflater.inflate(R.menu.main_activity, menu);
+        inflater.inflate(R.menu.list_activity, menu);
         return super.onCreateOptionsMenu(menu);
     }
-
-    private static final int SETTINGS_RESULT = 101;
 
     @Override
     public boolean onOptionsItemSelected(MenuItem item) {
@@ -351,19 +353,41 @@ public class ListsActivity extends Activity {
         }
 
         switch (item.getItemId()) {
-            case R.id.menu_compose:
-                Intent compose = new Intent(context, ComposeActivity.class);
-                startActivity(compose);
-                return true;
+            case R.id.menu_add_list:
+                final Dialog dialog = new Dialog(context);
+                dialog.setContentView(R.layout.create_list_dialog);
+                dialog.setTitle(getResources().getString(R.string.create_new_list) + ":");
 
-            case R.id.menu_direct_message:
-                Intent dm = new Intent(context, ComposeDMActivity.class);
-                startActivity(dm);
-                return true;
+                final HoloEditText name = (HoloEditText) dialog.findViewById(R.id.name);
+                final HoloEditText description = (HoloEditText) dialog.findViewById(R.id.description);
 
-            case R.id.menu_settings:
-                Intent settings = new Intent(context, SettingsPagerActivity.class);
-                startActivityForResult(settings, SETTINGS_RESULT);
+                Button cancel = (Button) dialog.findViewById(R.id.cancel);
+                cancel.setOnClickListener(new View.OnClickListener() {
+                    @Override
+                    public void onClick(View v) {
+                        dialog.dismiss();
+                    }
+                });
+
+                Button privateBtn = (Button) dialog.findViewById(R.id.private_btn);
+                privateBtn.setOnClickListener(new View.OnClickListener() {
+                    @Override
+                    public void onClick(View view) {
+                        new CreateList(name.getText().toString(), false, description.getText().toString()).execute();
+                        dialog.dismiss();
+                    }
+                });
+
+                Button publicBtn = (Button) dialog.findViewById(R.id.public_btn);
+                publicBtn.setOnClickListener(new View.OnClickListener() {
+                    @Override
+                    public void onClick(View view) {
+                        new CreateList(name.getText().toString(), true, description.getText().toString()).execute();
+                        dialog.dismiss();
+                    }
+                });
+
+                dialog.show();
                 return true;
 
             default:
@@ -419,6 +443,40 @@ public class ListsActivity extends Activity {
 
             LinearLayout spinner = (LinearLayout) findViewById(R.id.list_progress);
             spinner.setVisibility(View.GONE);
+        }
+    }
+
+    class CreateList extends AsyncTask<String, Void, Boolean> {
+
+        String name;
+        String description;
+        boolean publicList;
+
+        public CreateList(String name, boolean publicList, String description) {
+            this.name = name;
+            this.publicList = publicList;
+            this.description = description;
+        }
+
+        protected Boolean doInBackground(String... urls) {
+            try {
+                Twitter twitter =  Utils.getTwitter(context);
+
+                twitter.createUserList(name, publicList, description);
+
+
+                return true;
+            } catch (Exception e) {
+                return false;
+            }
+        }
+
+        protected void onPostExecute(Boolean created) {
+            if (created) {
+                recreate();
+            } else {
+                Toast.makeText(context, getResources().getString(R.string.error), Toast.LENGTH_SHORT);
+            }
         }
     }
 }
